--- a/footwearShop/src/app/core/navbar/navbar.component.html
+++ b/footwearShop/src/app/core/navbar/navbar.component.html
@@ -1,3 +1,18 @@
-<p>
-  navbar works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand">Home</a>
+  <div class="collapse navbar-collapse" id="navbarNav">
+  		<ul class="navbar-nav">
+  			<li class="nav-item">
+  				<a class="nav-link" routerLink="home">Home</a>
+  			</li>
+  			<li class="nav-item">
+  				<a class="nav-link">Product</a>
+  			</li>
+  		</ul>
+  			<ul class="navbar-nav ml-auto">
+  			<li class="nav-item mr-auto">
+  				<a class="nav-link" routerLink="login">Log in</a>
+  			</li>
+  		</ul>
+  </div>
+</nav>
