--- a/footwearShop/src/app/core/navbar/navbar.component.html
+++ b/footwearShop/src/app/core/navbar/navbar.component.html
@@ -6,10 +6,13 @@
   				<a class="nav-link" routerLink="home">Home</a>
   			</li>
   			<li class="nav-item">
-  				<a class="nav-link">Product</a>
+  				<a class="nav-link" routerLink="product">Product</a>
   			</li>
   		</ul>
   			<ul class="navbar-nav ml-auto">
+          <li class="nav-item mr-auto">
+          <a class="nav-link" routerLink="register">Register</a>
+        </li>
   			<li class="nav-item mr-auto">
   				<a class="nav-link" routerLink="login">Log in</a>
   			</li>
