--- a/footwearShop/src/app/dina/log-in/log-in.component.html
+++ b/footwearShop/src/app/dina/log-in/log-in.component.html
@@ -1,3 +1,18 @@
-<p>
-  log-in works!
-</p>
+<form [formGroup]="formLogin" (submit)="logIn()">
+	<div class="form-group row">
+		<label for="name" class="col-3">User name</label>
+		<div class="col-7">
+			<input type="text" class="form-control" id="userName" formControlName="userName">
+		</div>
+	</div>
+
+	<div class="form-group row">
+		<label for="name" class="col-3">Password</label>
+		<div class="col-7">
+			<input type="text" class="form-control" id="password" formControlName="password">
+		</div>
+	</div>
+
+	<button type="submit" class="btn btn-primary">Ok</button>
+
+</form>
