--- a/footwearShop/src/app/core/navbar/navbar.component.html
+++ b/footwearShop/src/app/core/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand">Home</a>
   <div class="collapse navbar-collapse" id="navbarNav">
   		<ul class="navbar-nav">
@@ -6,7 +6,7 @@
   				<a class="nav-link" routerLink="home">Home</a>
   			</li>
   			<li class="nav-item">
-  				<a class="nav-link" routerLink="product">Product</a>
+  				<a class="nav-link" routerLink="product">Brends</a>
   			</li>
   		</ul>
   			<ul class="navbar-nav ml-auto">
