--- a/footwearShop/src/app/dina/product/product.component.html
+++ b/footwearShop/src/app/dina/product/product.component.html
@@ -5,12 +5,13 @@
 <div class="col-9">
 <div class="viewZoom">
 	<img src="/assets/images/adidas.jpg" class="img-fluid " alt="smaple image" routerLink="login">
-	<img src="/assets/images/nike.jpg" class="img-fluid " alt="smaple image">
-	<img src="/assets/images/nb.png"class="img-fluid " alt="smaple image"> 
-	<img src="/assets/images/lacoste.jpg" class="img-fluid " alt="smaple image">
-	<img src="/assets/images/reebok.jpg" class="img-fluid " alt="smaple image">
-	<img src="/assets/images/kappa.png" class="img-fluid " alt="smaple image">
-	<img src="/assets/images/diadora.png" class="img-fluid " alt="smaple image">
+	<img src="/assets/images/nike.jpg" class="img-fluid " alt="smaple image" routerLink="login">
+	<img src="/assets/images/nb.png"class="img-fluid " alt="smaple image" routerLink="login"> 
+	<img src="/assets/images/lacoste.jpg" class="img-fluid " alt="smaple image" routerLink="login">
+	<img src="/assets/images/reebok.jpg" class="img-fluid " alt="smaple image" routerLink="login">
+	<img src="/assets/images/kappa.png" class="img-fluid " alt="smaple image" routerLink="login">
+	<img src="/assets/images/diadora.png" class="img-fluid " alt="smaple image" routerLink="login">
+	<img src="/assets/images/underArmour1.jpg" class="img-fluid " alt="smaple image" routerLink="login">
 </div>
 </div>
 </div>
